fixed overflow text

--- a/css/styles.css
+++ b/css/styles.css
@@ -189,3 +189,7 @@ button#button-mentees {
 .picker{
   width:94.5%;
 }
+
+.cal{
+  margin-top:0px;
+}
